# anna_mobile

./: README.rst  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
android/: AndroidManifest.xml
anna/: CHANGELOG  LICENSE
anna/src/anna/: __main__.py
anna/src/anna/core/: ai_engine.py  memory.py  voice_engine.py  wake_word.py
anna/src/anna/modules/: ar_system.py  calendar.py  computer_control.py  music_controller.py  network.py  vision.py  weather.py
data/: voice_history.json
data/auth/: password.hash
src/: mobile_voice_enhanced.py
src/anna/: app.py  pyproject.toml
src/anna/config/: settings.py
src/anna/core/: ai_engine.py  personality.py  voice_engine.py
src/anna/modules/: emotion_detection.py  face_recognition.py  gamification.py  music.py  news.py  notes.py  smart_home.py  web_search.py  whatsapp_enhanced.py
src/api/: gemini.py  groq.py  news.py  weather.py
src/auth/: login.py
src/models/: about.py  ar_vision.py  contacts.py  ocr.py  phone.py  reminders.py
src/utils/: theme.py
