[project]
name = "anna_mobile"
version = "0.4.0"
description = "Adaptive Nöro Network Asistanı Mobil"
requires-python = ">=3.9"
authors = [
    { name = "westabdu", email = "westabdu@users.noreply.github.com" }
]
dependencies = [
    "flet==0.22.0",
    "numpy==1.24.3",
    "opencv-python-headless==4.9.0.80",
    "mediapipe==0.10.8",
    "easyocr==1.7.1",
    "pytesseract==0.3.10",
    "pyzbar==0.1.9",
    "SpeechRecognition==3.10.4",
    "gTTS==2.5.1",
    "edge-tts==6.1.13",
    "pygame==2.5.2",
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "pvporcupine==3.0.3",
    "google-generativeai==0.7.2",
    "groq==0.9.0",
    "pillow==11.1.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "psutil==7.0.0"
]

[tool.flet]
org = "com.anna"
product = "A.N.N.A"
company = "ANNA"
copyright = "Copyright (C) 2026 by ANNA"

[tool.flet.app]
path = "."
module = "main"

[tool.flet.android]
permissions = [
    "CAMERA",
    "RECORD_AUDIO",
    "INTERNET",
    "READ_EXTERNAL_STORAGE",
    "WRITE_EXTERNAL_STORAGE",
    "VIBRATE",
    "WAKE_LOCK"
]

# Android için özel derleme ayarları
android = { 
    "min_sdk_version": 21,
    "target_sdk_version": 33,
    "ndk_version": "25.1.8937393"
}